--- a/Dockerfile-subdomain-web
+++ b/Dockerfile-subdomain-web
@@ -1,2 +1,7 @@
 FROM nginx:1.26.3
+
+# Install OpenSSL for certificate generation
+RUN apt-get update && apt-get install -y openssl && rm -rf /var/lib/apt/lists/*
+
+# Copy files
 COPY ./subdomain/nginx.conf /etc/nginx/nginx.conf
