--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,14 +44,20 @@ services:
     build:
       context: .
     container_name: nginx
+    environment:
+      - DOMAINS='*.ikedesigns.com'
     ports:
       - "${NGINX_PORT:-80}:80"
+      - "${NGINX_PORT:-443}:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx-logs:/var/log/nginx
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
     depends_on:
       - nexus
       - komet
+      - certbot
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:${NGINX_PORT:-80}/"]
       interval: 30s
@@ -66,6 +72,7 @@ services:
         max-size: "10m"
         max-file: "3"
     profiles: ["path-based"]
+
   ikmdev-site:
       image: ikebox/ikmdev-site:1.0.0
       container_name: ikmdev-site
@@ -85,7 +92,7 @@ services:
         max-size: "10m"
         max-file: "3"
       profiles: ["subdomain"]
-  
+
   nginx-subdomain:
     build:
       context: .
@@ -93,13 +100,16 @@ services:
     container_name: nginx-subdomain
     ports:
       - "${NGINX_PORT:-80}:80"
+      - "${NGINX_PORT:-443}:443"
     volumes:
       - ./subdomain/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx-logs:/var/log/nginx
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
     depends_on:
       - nexus
       - komet
       - ikmdev-site
+      - certbot
     healthcheck:
       test: ["CMD", "curl", "-f", "http://www.ikedesigns.com"]
       interval: 30s
@@ -114,11 +124,27 @@ services:
         max-size: "10m"
         max-file: "3"
     profiles: ["subdomain"]
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    environment:
+      - DOMAINS='*.ikedesigns.com'
+    volumes:
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
+
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot certonly --webroot --webroot-path=/var/www/certbot --email devops@ikm.dev --agree-tos --no-eff-email --staging -d www.ikedesigns.com --non-interactive --keep-until-expiring; sleep 30d & wait $${!}; done;'"
+    networks:
+      - rapidenv
+    restart: always
 volumes:
   nexus-data:
   komet-data:
   nginx-logs:
   ikmdev-data:
+  certbot-data:
+  certbot-webroot:
 
 networks:
   rapidenv:
