--- a/subdomain/nginx.conf
+++ b/subdomain/nginx.conf
@@ -3,38 +3,81 @@ events {
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log  /var/log/nginx/access.log  main;
+    error_log   /var/log/nginx/error.log debug;
 
-    access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log debug;
+    sendfile        on;
+    keepalive_timeout  65;
 
-    sendfile on;
-    keepalive_timeout 65;
-
-# Proxy subdomain routing for website
-
+    # --- HTTP (redirect to HTTPS) ---
     server {
-    listen 80;
-    server_name www.ikedesigns.com;
-
-    location / {
-        proxy_pass http://ikmdev-site:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
-
-        # Nexus proxy Path-based routing for Nexus
-        server {
         listen 80;
+        server_name www.ikedesigns.com nexus.ikedesigns.com komet.ikedesigns.com;
+
+        # Certbot webroot challenge
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        # Redirect all HTTP requests to HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # --- HTTPS for www.ikedesigns.com ---
+    server {
+        listen 443 ssl;
+        server_name www.ikedesigns.com;
+
+        ssl_certificate     /etc/letsencrypt/live/www.ikedesigns.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/www.ikedesigns.com/privkey.pem;
+
+        error_page 497 https://$host$request_uri;
+
+        # SSL configuration
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 1d;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+
+        location / {
+            proxy_pass http://ikmdev-site:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+
+    # --- HTTPS for nexus.ikedesigns.com ---
+    server {
+        listen 443 ssl;
         server_name nexus.ikedesigns.com;
+
+        ssl_certificate     /etc/letsencrypt/live/nexus.ikedesigns.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/nexus.ikedesigns.com/privkey.pem;
+
+        error_page 497 https://$host$request_uri;
+
+        # SSL configuration 
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 1d;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+
         location / {
             proxy_pass http://nexus:8081;
             proxy_set_header Host $host;
@@ -43,13 +86,28 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
-    
-     # Komet proxy Path-based routing for Komet subdomain
-        server {
-        listen 80;
+
+    # --- HTTPS for komet.ikedesigns.com ---
+    server {
+        listen 443 ssl;
         server_name komet.ikedesigns.com;
-         location / {
-            proxy_pass  http://komet:8080/;
+
+        ssl_certificate     /etc/letsencrypt/live/komet.ikedesigns.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/komet.ikedesigns.com/privkey.pem;
+
+        error_page 497 https://$host$request_uri;
+
+        # SSL configuration
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 1d;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+
+        location / {
+            proxy_pass http://komet:8080/;
             proxy_buffering    off;
             proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-Proto $scheme;
@@ -61,6 +119,4 @@ http {
             proxy_http_version 1.1;
         }
     }
-
-   
 }
